--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,30 @@
-TODO Plan::
+TODO Plan
+=-=-=-=-=-=
 	JOE version 3.0 will be readable source code with documentation.
 	It is possible that last 2.9 version will be 2.9.156 :)	
 
+USER ChangeLog
+=-=-=-=-=-=-=-=
+** JOE 2.9.4 :: 27 Mar 2001
+	- FEATURE:: locale (LC_CTYPE) is accepted 
+		when skipping/deleting/... words	
+** JOE 2.9 :: 22 Mar 2001
+	- version 2.8 with patches from RedHat/Suse
+
+PROGRAMMER ChangeLog
+=-=-=-=-=-=-=-=-=-=-=
+** JOE 2.9.4 :: 27 Mar 2001
+	- FEATURE:: locale is accepted when skipping/deleting/... words
+	- changed parts of zstr.c/zstr.h and some others
+** JOE 2.9.3 :: 26 Mar 2001
+	- changed version number :) to 2.9.3
+	- variable helpcursor was renamed to help_index because 
+		it contains index of last shown help screen
+	- function izhelp was moved from rc.c/rc.h to help.c/help.h
+		and variable nhelp (from rc.c) was deleted
+	- help.c/help.h are readable now but still not documented enough
+		because they depend on rc.c/rc.h; so I must work on them
+		first
 ** JOE 2.9.2 :: 25 Mar 2001
 	- function cwhite() was substituted for isblank()
 		from <ctype.h>
