--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Nov 06 2001  Vitezslav Samel <samel@mail.cz>
+	* new file README.cvs: documentation file on how to access joe sources
+	via CVS
+
 Sun Nov 04 2001  Vitezslav Samel <samel@mail.cz>
 	* ufile.c: kill infinite loop when saving unmodified file
 	(sourceforge.net BUG #478290)
