--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
+Wed Nov 07 2001  Vitezslav Samel <samel@mail.cz>
+	* Makefile.am, deleted conf.c: conf.c not used anymore
+
+Wed Nov 07 2001 Vitezslav Samel <samel@mail.cz>
+	* Makefile.am: add README.cvs and docs/help-system.html
+	to EXTRA_DIST variable
+
 Wed Nov 07 2001  Marek 'Marx' Grac <xgrac@fi.muni.cz>
-        * docs/help-system.html: updated
+	* docs/help-system.html: updated
 
 Tue Nov 06 2001  Vitezslav Samel <samel@mail.cz>
 	* new file README.cvs: documentation file on how to access joe sources
