--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Nov 12 2001  Vitezslav Samel <samel@mail.cz>
+	* Makefile.am, deleted chain.asm, kbdhdl.c, kbdhdl.h, msscrn.c,
+	mstty.c, termcap, terminfo: delete unused files from distribution
+
 Mon Nov 12 2001  Peter Breitenlohner <peb@mppmu.mpg.de>
 	* Makefile.am: make joe installable into another root dir
 	with "make DESTDIR=/path/ install"
