--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
 Sun Dec 09 2001  Vitezslav Samel <samel@mail.cz>
+	* b.c, bw.c, cmd.c, hash.c, help.c, kbd.c, macro.c, menu.c, pw.c,
+	queue.c, qw.c, rc.c, scrn.c, tab.c, termcap.c, tty.c, tw.c, ufile.c,
+	uformat.c, uisrch.c, umath.c, undo.c, usearch.c, utils.c, utils.h,
+	va.c, vfile.c, vs.c, w.c:
+	prepare memory allocation functions (change (m|re|c)alloc() and free()
+	into joe_(m|re|c)alloc() and joe_free()) in the utils.c for further
+	checking
+
+Sun Dec 09 2001  Vitezslav Samel <samel@mail.cz>
 	* b.c, cmd.c, dir.c, hash.c, hash.h, pw.c, pw.h, rc.c, tab.c, tab.h,
 	uedit.c, uedit.h, ufile.c, uisrch.c, uisrch.h, umath.c, umath.h, undo.c,
 	ushell.c, utag.c, w.c:
