--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Dec 11 2001  Vitezslav Samel <samel@mail.cz>
+	* configure.ac, path.c:
+	include <limits.h> if available to get PATH_MAX
+
 Sun Dec 09 2001  Vitezslav Samel <samel@mail.cz>
 	* b.c, bw.c, cmd.c, hash.c, help.c, kbd.c, macro.c, menu.c, pw.c,
 	queue.c, qw.c, rc.c, scrn.c, tab.c, termcap.c, tty.c, tw.c, ufile.c,
