--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Overview of changes in JOE 2.9.7 (14 Dec 2001)
+- BUGFIX: don't exchange start and end point of the block in some cases
+- defaulting to turn off -asis (locales take care of this; if joe doesn't
+  print characters with 8th bit set properly, check if you have properly
+  installed and set locales or simply turn on -asis option in joerc)
+- fix to make joe compilable on *BSD
+- fix to make joe compilable on systems without siginterrupt()
+- added "support" for End key
+- code cleanup: warnings removal (some still remaining, working on it)
+
 Overview of changes in JOE 2.9.7 (7 Nov 2001)
 - BUGFIX: always save (even not-modified) file
 - BUGFIX: solve problem with freezing after saving unmodified file
