--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jan 19 2002  Vitezslav Samel <samel@mail.cz>
+	* ublock.c:
+	don't use markb and markk after they are freed (fixes segfault)
+
 Sun Jan 13 2002  Vitezslav Samel <samel@mail.cz>
 	* regex.c:
 	fix char escaping in \+ case
