--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
+	* b.c:
+	change "expr, expr" to "expr; expr"
+
+Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
 	* b.c, b.h, types.h:
 	cosmetic cleanup: add comments - this patch doesn't touch code
 
