--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jul 27 2002  Vitezslav Samel <samel@mail.cz>
+	* jmacsrc.in, jpicorc.in, jstarrc.in:
+	use .@7 terminfo entry for "End" key
+
 Wed Jun 26 2002  Vitezslav Samel <samel@mail.cz>
 	* bw.c, rc.c, rc.h, w.c:
 	rename getcontext() to kmap_getcontext() to prevent conflict with glibc
