--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan  1 2003  Vitezslav Samel <samel@mail.cz>
+	* b.c:
+	pisbow() should match the beginning of file and piseow() should match
+	the end of file
+
 Sat Dec  7 2002  Vitezslav Samel <samel@mail.cz>
 	* kbd.c:
 	don't expect all archs have "char == signed char" by default
