--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 Sun Mar  2 2003  Vitezslav Samel <samel@mail.cz>
+	* bw.c, cmd.c, hash.c, kbd.c, macro.c, main.c, menu.c, path.c,
+	poshist.c, pw.c, qw.c, rc.c, regex.c, scrn.c, tab.c, termcap.c, tty.c,
+	tw.c, ublock.c, uedit.c, uerror.c, ufile.c, uisrch.c, umath.c, undo.c,
+	usearch.c, ushell.c, utag.c, vfile.c, vs.c, w.c:
+	change 0 to NULL where we're talking about pointers
+
+Sun Mar  2 2003  Vitezslav Samel <samel@mail.cz>
 	* vs.c, vs.h:
 	make vsrm() and slen() of type sELEMENT *
 
